# fastapi-template

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Makefile  pyproject.toml  requirements.txt
backend/: main.py
backend/app/: router.py
