[project]
name = "fastapi-template"
version = "0.1.0"
description = "fastapi-template"
requires-python = ">=3.11"
dependencies = [
    "asyncmy>=0.2.10",
    "cryptography>=45.0.5",
    "fastapi>=0.116.1",
    "fastapi-limiter>=0.1.6",
    "fastapi-pagination>=0.13.3",
    "greenlet>=3.2.3",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-crud-plus>=1.10.0",
    "uvicorn>=0.35.0",
]
